[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/OQ_Toolkit/OQ_UI2D/controls/VirtualKeyboard.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/OQ_Toolkit/OQ_UI2D/scripts/OQ_UI2DKeyboard.gd" type="Script" id=3]
[ext_resource path="res://addons/OQ_Toolkit/OQ_UI2D/theme/oq_ui2d_standard.theme" type="Theme" id=4]


[node name="OQ_UI2DKeyboard" type="Spatial"]
script = ExtResource( 3 )

[node name="OQ_UI2DCanvas_Keyboard" parent="." instance=ExtResource( 1 )]
editor_live_update = false
transparent = false

[node name="VirtualKeyboard" parent="OQ_UI2DCanvas_Keyboard" instance=ExtResource( 2 )]

[node name="OQ_UI2DCanvas_TextInput" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
editor_live_update = false
transparent = false

[node name="TextEdit" type="TextEdit" parent="OQ_UI2DCanvas_TextInput"]
margin_right = 512.0
margin_bottom = 48.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
